Add comprehensive API testing infrastructure for FastAPI endpoints
- Enhanced pytest configuration in pyproject.toml with proper test markers and httpx dependency
- Expanded conftest.py with specialized API testing fixtures including mock RAG system and test client
- Created test_api_endpoints.py with 22 comprehensive test cases covering all API routes
- Added proper error handling and validation tests for /api/query, /api/courses, and /api/new-session endpoints
- Resolved static file mounting issues in test environment through isolated FastAPI app fixture
- All API tests passing with full request/response validation and integration workflow testing

--- a/backend/tests/pytest.ini
+++ b/backend/tests/pytest.ini
@@ -7,5 +7,6 @@ addopts = -v --tb=short --strict-markers
 markers =
     unit: Unit tests for individual components
     integration: Integration tests for component interactions
+    api: API endpoint tests
     e2e: End-to-end tests for full system
     slow: Tests that take longer to run
